--- a/PB692-01_Resume_WOStyle.html
+++ b/PB692-01_Resume_WOStyle.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<style>
-</style>
+<link rel="stylesheet" type="text/css" href="https://profgamble.github.io/style.css">
 </head>
 <body>
     <header> <center> Niall Horan </center></header>
