--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ This website is all about the history of One Direction, also known as the best b
 <p>
 	<h3>Table of Contents</h3>
 <li><a href="https://codepen.io/ninaps17/pen/LEPajJe">Basic HTML/CSS exercise</a></li>
-<li><a href="https://ninaps17.github.io/PB692-01_Resume_WOStyle.html">Example of a resume using semantic HTML with CSS applied</a></li>
+<li><a href="https://ninaps17.github.io/resume.html">Example of a resume using semantic HTML with CSS applied</a></li>
 </p>
 </body>
 </html>
